@@ -18,6 +18,7 @@ Bugfixes
 --------
 - avoid an assert() error in stash_rrset() (!1072)
 - fix emergency cache locking bug introduced in 5.1.3 (!1078)
+- migrate map() command to control sockets; fix systemd integration (!1000)
 
 
 Knot Resolver 5.1.3 (2020-09-08)
